tests/fixtures/syntax/valid/document_case_blank_and_comment_before_case.repor
document case {
  title "Separated from its case"
}

# blank lines and plain comments may separate a document case from its case

case "still associated" {
  $ true
  assert {
    exit 0
  }
}
