tests/fixtures/syntax/invalid/and_block_not_supported.repor
case "and block not supported" {
  $ true
  assert {
    and {
      exit 0
      exit 0
    }
  }
}
